# cilium

./: Cargo.toml  generate_bindings.bat  rustfmt.toml
bindings/c/: cbindgen.toml  cilium.h
bindings/c++/: cbindgen.toml  cilium.hpp
cilium/: Cargo.toml
cilium-derive/: Cargo.toml
cilium-derive/src/: from_repr.rs  lib.rs  table.rs
cilium/src/: assembly.rs  indices.rs  lib.rs  main.rs  metadata_token.rs  pe.rs  utilities.rs
cilium/src/ffi/: containers.rs  mod.rs
cilium/src/heaps/: blob.rs  guid.rs  mod.rs  string.rs  table.rs
cilium/src/raw/: assembly.rs  il.rs  indices.rs  mod.rs  pe.rs
cilium/src/raw/heaps/: blob.rs  guid.rs  mod.rs  string.rs  table.rs
cilium/src/schema/: assembly.rs  errors.rs  heaps.rs  method.rs  mod.rs  type.rs
cilium/src/structured/: assembly.rs  context.rs  methods.rs  mod.rs  resolver.rs  types.rs
experiments/: Cargo.toml
experiments/src/: main.rs
