[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
memory-stats = "1.1.0"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.18"
cilium = { path = "../cilium", features = ["tracing", "memmap2"] }
